# docs/swagger.json
@@ -35,8 +35,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "tablename",
-                        "name": "tablename",
+                        "description": "collect_type,0:gateway,1:park_water",
+                        "name": "collect_type",
                         "in": "query",
                         "required": true
                     }
